Add:プライバシーポリシー
プライバシーポリシーとデザインを追加

--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -8,6 +8,67 @@
   <title>PrivacyPolicy</title>
 </head>
 <body>
-  
+  <header>
+    <div class="header-container">
+      <div class="header-title">
+        <h1>25TomaTimer</h1>
+      </div><!-- header-title -->
+    </div><!-- header-container -->
+  </header>
+  <main>
+    <div class="main-container">
+      <div class="main-title-wrap">
+        <h2>・プライバシーポリシー・</h2>
+      </div><!-- main-title-wrap -->
+      <div class="main-item-wrap">
+        <div class="main-item">
+          <div class="main-item-ttl">
+            <h3>[利用者情報の取得]</h3>
+          </div><!-- main-item-ttl -->
+          <div class="main-item-contents">
+            <p>本アプリが利用者の個人情報を取得することはありません。</p>
+          </div><!-- main-item-contents -->
+        </div><!-- main-item -->
+        <div class="main-item">
+          <div class="main-item-ttl">
+            <h3>[利用者情報の利用]</h3>
+          </div><!-- main-item-ttl -->
+          <div class="main-item-contents">
+            <p>本アプリが利用者の個人情報を利用することはありません。</p>
+          </div><!-- main-item-contents -->
+        </div><!-- main-item -->
+        <div class="main-item">
+          <div class="main-item-ttl">
+            <h3>[利用者情報の第三者提供]</h3>
+          </div><!-- main-item-ttl -->
+          <div class="main-item-contents">
+            <p>本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
+          </div><!-- main-item-contents -->
+        </div><!-- main-item -->
+        <div class="main-item">
+          <div class="main-item-ttl">
+            <h3>[使用ツール]</h3>
+          </div><!-- main-item-ttl -->
+          <div class="main-item-contents">
+            <p>
+              本アプリでは広告配信ツールを使用しておりません。
+              したがって、個人情報の取得または利用することはありません。
+            </p>
+          </div><!-- main-item-contents -->
+        </div><!-- main-item -->
+        <div class="main-item">
+          <div class="main-item-ttl">
+            <h3>[お問い合わせ先]</h3>
+          </div><!-- main-item-ttl -->
+          <div class="main-item-contents">
+            <p>
+              何かご不明な点がございましたら、下記までお問い合わせください。<br/>
+              badokazawa.2140@gmail.com
+            </p>
+          </div><!-- main-item-contents -->
+        </div><!-- main-item -->
+      </div><!-- main-item-wrap -->
+    </div><!-- main-container -->
+  </main>
 </body>
 </html>
